turtleart.lessons.turtleart.Main.Polygon360.scala.error
Source:4: error: not found: type double
avance(1:double)
         ^Source:5: error: not found: type double
gauche(90:double)
          ^