turtleart.lessons.turtleart.Main.Polygon360.scala.code
override def run() {
droite(90:Double)
avance(1:double)
gauche(90:double)
}
